cleanup uptime sensors

--- a/esphome/common_substitutions/device_base.yaml
+++ b/esphome/common_substitutions/device_base.yaml
@@ -20,26 +20,47 @@ sensor:
 
   - platform: uptime
     name: $upper_devicename Uptime Sensor
-    id: uptime_sensor
-    update_interval: 5s
-    on_raw_value:
-      then:
-        - text_sensor.template.publish:
-            id: uptime_human
-            state: !lambda |-
-              int seconds = round(id(uptime_sensor).raw_state);
-              int days = seconds / (24 * 3600);
-              seconds = seconds % (24 * 3600);
-              int hours = seconds / 3600;
-              seconds = seconds % 3600;
-              int minutes = seconds /  60;
-              seconds = seconds % 60;
-              return (
-                (days ? String(days) + "d " : "") +
-                (hours ? String(hours) + "h " : "") +
-                (minutes ? String(minutes) + "m " : "") +
-                (String(seconds) + "s")
-              ).c_str();
+    id: sensor_uptime
+
+  - platform: template
+    id: sensor_uptime_timestamp
+    name: "$upper_devicename Uptime"
+    device_class: timestamp
+    entity_category: diagnostic
+    accuracy_decimals: 0
+    update_interval: never
+    lambda: |-
+      static float timestamp = (
+        id(time_homeassistant).utcnow().timestamp - id(sensor_uptime).state
+      );
+      return timestamp;
+
+time:
+  - platform: homeassistant
+    id: time_homeassistant
+    timezone: Europe/Athens
+    on_time_sync:
+      - component.update: sensor_uptime_timestamp
+
+    # update_interval: 5s
+    # on_raw_value:
+    #   then:
+    #     - text_sensor.template.publish:
+    #         id: uptime_human
+    #         state: !lambda |-
+    #           int seconds = round(id(uptime_sensor).raw_state);
+    #           int days = seconds / (24 * 3600);
+    #           seconds = seconds % (24 * 3600);
+    #           int hours = seconds / 3600;
+    #           seconds = seconds % 3600;
+    #           int minutes = seconds /  60;
+    #           seconds = seconds % 60;
+    #           return (
+    #             (days ? String(days) + "d " : "") +
+    #             (hours ? String(hours) + "h " : "") +
+    #             (minutes ? String(minutes) + "m " : "") +
+    #             (String(seconds) + "s")
+    #           ).c_str();
 
 binary_sensor:
   - platform: status
@@ -56,7 +77,7 @@ text_sensor:
     ip_address:
       name: $upper_devicename  IP
 
-  - platform: template
-    name: $upper_devicename Uptime Human Readable
-    id: uptime_human
-    icon: mdi:clock-start
+  # - platform: template
+  #   name: $upper_devicename Uptime Human Readable
+  #   id: uptime_human
+  #   icon: mdi:clock-start
